# hilok

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ci-cov.sh  ci-test.sh  pre-build-script.sh  requirements.txt  setup.py
.github/workflows/: deploy-linux.yml  deploy-winosx.yml  deploy.yml  test.yml
src/: hierr.hpp  hilok.cpp  hilok.hpp  psplit.hpp  pybind.cpp  recsh.cpp  recsh.hpp
tests/: test.cpp  test_hilok.py
